base/network-policies/frontend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-netpol
  labels:
    app: invoice-analyzer
    component: frontend
spec:
  podSelector:
    matchLabels:
      app: invoice-analyzer
      component: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock: # Allow traffic from ALB (Client IPs preserved)
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: invoice-analyzer
          component: backend
    ports:
    - protocol: TCP
      port: 8000
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
